# zos

./: CMakeLists.txt  empty.fat
src/: CMakeLists.txt  FAT.cpp  FAT.h  bad1.txt  bad3.txt  fs.cpp  fs.h  main.cpp  test.sh  util.h
